# solidmind-cad

./: .dockerignore  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/agents/: code-fixer.md  code-reviewer.md
.claude/rules/: analysis-policy.md  design-pipeline.md  extension-packs.md  gazebo.md  isaac-sim.md  knowledge-backend.md  me-preflight.md  motion-validation.md  orchestrator-protocol.md  self-assessment.md  sim-engine-policy.md  study-policy.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
chrono_daemon/: CMakeLists.txt  README.md  chrono-daemon.service  install-service.sh  main.cpp  mechanism_builder.h  protocol.h  run.sh  simulator.h
docker/: .dockerignore  .env.example  Dockerfile.worker  build.sh  docker-compose.yml  freecad_startup.py
docs/: ROADMAP.md  creating-packs.md  fix-urdf-export-coordinates.md  freecad_to_isaac_pipeline.md  gazebo_integration.md  orchestrator-7-arch-fixes.md  orchestrator-plan-cad-rewrite.md  px4_integration.md  simulation-and-rl.md  tool-design-cad-create-primitive.md
examples/: README.md
examples/cnc/: L1.json  L2.json  L3.json  sensor_bracket_L2.json
examples/foam_dart_spring_launcher/: README.md  design_brief.json  failure_modes.yaml  physics_model.py  run.py
examples/hexapod_robot/: ISAAC_DEMO.md  README.md  assemble_view.py  build_and_train.sh  run.py  watch_walking.sh
examples/print_3d/: L1.json  (+2 more)
examples/solidmind-example-pack/: pyproject.toml
examples/solidmind-example-pack/solidmind_example_pack/: pack.py
examples/solidmind-example-pack/solidmind_example_pack/knowledge/: bend_basics.md
feature_support/: geometry_capabilities.yml  manifest.yml  planning_policy.yml  planning_policy_links.yml  verification_policy.yml
freecad_addon/: InitGui.py  __init__.py  commands.py  compat.py  protocol.py  qt_compat.py  selection_observer.py  socket_server.py  test_integration.py
gazebo_bridge/: __init__.py  bridge_server.py  controllers.py  models.py  px4_integration.py  runtime_gazebo.py
geometry/: Cargo.toml
isaac_bridge/: __init__.py  bridge_server.py  controllers.py  hexapod_ik.py  keyboard_teleop.py  lifecycle.py  models.py  protocol.py  runtime_isaac.py
me_knowledge/: README.md
me_patterns/: index.yml
orchestrator/: README.md  __init__.py  __main__.py  _serde.py  a2a_client.py  a2a_server.py  config.py  cost.py  council.py  dsm.py  fea.py  fea_bc_mapper.py  interface_freeze.py  knowledge.py  materials.py  measure.py  normalizer.py  providers.py  release.py  runner.py  sbce.py  scorer.py  skeleton.py  spec.py  state.py  validator.py  worker.py  worker_entry.py  worker_subprocess.py
question_bank/: cnc.yml  glossary.yml  print_3d.yml
rl_training/: __init__.py  env_configurator.py  export_policy.py  hexapod_env.py  isaaclab_cfg.py  isaaclab_train.py  ppo.py  residual_env.py  reward.py  rewards_vectorized.py  rsl_rl_cfg.py  train.py
schemas/: cnc.schema.json  common.schema.json  eir.schema.json  geometry_capabilities.schema.json  gir.schema.json  planning_plan.schema.json  planning_policy.schema.json  print_3d.schema.json  shared_definitions.json  verification_policy.schema.json
scripts/: DEMO_CHEATSHEET.md  DEMO_PROMPT.md  add_hexapod_servos.py  check_feature_support.py  demo_auto_profile.py  demo_build_hexapod.py  demo_build_hexapod_18dof.py  demo_preflight.py  demo_rl_walk.py  diagnose_3dof_controller.py  eval_policy_isaac.py  export_checkpoint_policy.py  export_checkpoint_to_jit.py  fix_stl_coords.py  freecad_from_spec.py  generate_test_fixtures.py  hexapod_leg_positions.py  ingest_knowledge.py  install_freecad_addon.sh  isaac_keyboard_teleop.py  isaac_lifecycle.py  merge_fixed_joints_urdf.py  merge_stl_per_link.py  plot_2dof_gait.py  px4_smoke_test_takeoff.py  record_drone_demo_dryrun.py  regen_urdf.py  replay_transcript.py  run_gazebo_bridge.sh  run_hexapod_teleop.sh  run_isaac_bridge.sh  run_rl_training.sh  setup_openrag.sh  show_model_isaac.py  smoke_test_isaac.py  smoke_test_rl.py  summarize_sim_changes.py  sync_me_corpus.py  test_policy_deploy.py  test_urdf_import.py  (+3 more)
server/: __init__.py  analysis_assembly.py  analysis_convergence.py  analysis_face_map.py  analysis_fluids.py  analysis_materials.py  analysis_mesh.py  analysis_models.py  analysis_result_parser.py  analysis_sim_coupling.py  analysis_solver_cholmod.py  analysis_solver_cudss.py  analysis_solver_dust.py  analysis_solver_elmer.py  analysis_solver_su2.py  analysis_solvers.py  analysis_store.py  belt_drive.py  cad_gen.py  cad_gen_box.py  chrono_client.py  collision_policy.py  constants.py  decide.py  design_models.py  design_store.py  failure_modes.py  fastener_data.py  feature_support.py  four_bar.py  freecad_client.py  gazebo_adapter.py  gazebo_client.py  gear_train_solver.py  geometry_compiler_freecad.py  geometry_constraints.py  geometry_executor.py  geometry_helpers.py  geometry_ir.py  geometry_planner.py  (+71 more)
solidmind_geometry/: __init__.py
tests/: __init__.py  conftest.py  helpers.py  test_airframes_fixed_wing.py  test_airframes_multicopter.py  test_airframes_vtol.py  test_analysis_aero.py  test_analysis_assembly.py  test_analysis_conjugate_thermal.py  test_analysis_face_map.py  test_analysis_fluids.py  test_analysis_materials.py  test_analysis_mesh.py  test_analysis_models.py  test_analysis_models_extensions.py  test_analysis_sim_coupling.py  test_analysis_solver_cholmod.py  test_analysis_solver_cudss.py  test_analysis_solvers.py  test_analysis_thermal.py  test_apply_answer.py  test_cad_gen.py  test_chrono_applied_forces_e2e.py  test_chrono_client.py  test_chrono_spring_e2e.py  test_collision_policy.py  test_compat.py  test_compiler_contracts.py  test_controller_registry.py  test_cost.py  test_council.py  test_create_primitive.py  test_decide.py  test_design_path_gate.py  test_docker_e2e.py  test_dsm.py  test_e2e_cad_flow.py  test_error_cases.py  test_executor_checkpoints.py  test_executor_integration.py  (+138 more)
(+81 files in other folders)
