[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "solidmind-cad"
version = "0.2.0"
description = "FreeCAD-integrated CAD co-pilot driven by MCP — PartDesign workbench + manufacturing readiness"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "jsonschema>=4.10,<5",
  "orjson>=3.9,<4",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu"]
knowledge = [
  "lancedb>=0.15,<1",
  "sentence-transformers>=3.0,<4",
  "docling>=2.0,<3",
]
fea = [
  "gmsh>=4.12,<5",
  "meshio>=5.3,<6",
]
fea-cpu = [
  "scipy>=1.11,<2",
  "scikit-sparse>=0.4,<1",
]
fea-gpu = [
  "scipy>=1.11,<2",
  "nvidia-cudss-cu12>=0.4,<1",
  "nvmath-python>=0.8,<1",
  "cupy-cuda12x>=14,<15",
]
schemas = ["pydantic>=2.6,<3"]
dev = ["maturin>=1.7,<2"]

[project.scripts]
solidmind-cad = "server.main:main"

[tool.pytest.ini_options]
markers = [
    "requires_gazebo_real: needs Gazebo Harmonic installed",
    "requires_isaac_real: needs Isaac Sim installed",
    "requires_chrono_real: needs Chrono daemon built",
    "slow: tests that take >5s",
    "subprocess: spawns real subprocesses",
]
testpaths = ["tests"]

[tool.maturin]
manifest-path = "geometry/Cargo.toml"
python-source = "."
module-name = "solidmind_geometry"
